Ajustes en contactos, se avanzo responsive de register

--- a/src/public/css/check.css
+++ b/src/public/css/check.css
@@ -49,3 +49,10 @@ h3{
   font-family: 'Nunito', sans-serif;
   font-style: normal;
 }
+
+@media (max-width: 768px){
+  .radio-image{
+    width: 80%;
+    height: 80%;
+  }   
+}
