--- a/src/public/css/objetivos.css
+++ b/src/public/css/objetivos.css
@@ -1,18 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-html, body{
-    margin: 0; 
-    padding: '0';
+*html, body{
+    box-sizing: border-box;
+    width: 100vw;
+}
+
+.objetivos-img{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1662393764/Por%20Ti/fondo-login_gedmgk.png), linear-gradient(to right top, #121035, #1f1b57, #2e267b, #4031a0, #553bc6);
+    height: 100%;
 }
 
 .main{
-    background: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1648519753/Por%20Ti/fondo_registro_s5hqja.png) no-repeat center center;
-    background-size: cover;
-    height: 80%;
     text-align: center;
     color: white;
-    padding-top: 100px;
     padding-bottom: 100px;
 }
 
@@ -22,18 +27,21 @@ html, body{
     justify-content: center;
 }
 
-h4{
+.objetivos-title{
 font-family: 'Poppins';
 font-weight: 300;
 top: 300px;
 margin: 0 auto;
+font-size: 18px;
+padding-bottom: 5px;
 }
 
-h1{
+.objetivos-text{
 font-family: 'Poppins';
 font-weight: 600;
 margin-top: 350px;
 margin: 0 auto;
+font-size: 32px;
 }
 
 h5{
@@ -42,8 +50,13 @@ h5{
     font-size: medium;
 }
 
+.contenedor-objetivos h3{
+    font-family: 'Nunito';
+    font-weight: 400;
+    font-size: 18px;
+}
+
 .contenedor-objetivos{
-    margin: 50px;
     margin-top: 50px;
     display: flex;
     flex-direction: row;
@@ -55,7 +68,6 @@ h5{
     background-color: rgba(0, 0, 0, 0.28);
     border-radius: 50px;
     padding: 50px, 15px;
-    margin: 1em;
     width: 600px;
     height: 600px;
     backdrop-filter: blur(2px);
@@ -76,25 +88,37 @@ h5{
 
 #sub-contenedor-objetivos img{  
     margin-top: 30px;
-   height: 200px;
+    height: 200px;
 }
 
-button{
+.button-register{
 font-family: 'Poppins', sans-serif;
 font-weight: 600;
 font-size: medium;
 border-radius: 50px;
 text-decoration: none;
 border: none;
-margin: 0 auto;
+margin: 50px auto;
 padding: 15px;
 width:  16em;
 background-color: rgb(254, 223, 200);
 color: rgb(65, 64, 105);
 }
 
-button:hover{
+.button-register:hover{
     background-color: rgba(254, 223, 200, 0.8);
     transition:background-color 0.3s ease-in-out;
     cursor: pointer;
+}
+
+
+@media (max-width: 768px){
+    .contenedor-objetivos{
+        flex-direction: column;
+    }   
+    #sub-contenedor-objetivos{
+        margin: 0em;
+        width: fit-content;
+        height: fit-content;
+  }
 }
