--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
     <link rel="stylesheet" href="/css/fondo.css" type="text/css">
     <link rel="stylesheet" href="/css/footer2.css" type="text/css">
+    <link rel="stylesheet" href="/css/header.css" type="text/css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
