--- a/src/views/listado.ejs
+++ b/src/views/listado.ejs
@@ -1,145 +1,182 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactos</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <!--FAVICON--> 
-      <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
-      
-     <!--CSS--> 
-     <link rel="stylesheet" href="/css/listado.css" type="text/css">
-     <link rel="stylesheet" href="/css/fondo.css" type="text/css">
+   <!--FAVICON--> 
+   <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
+
+    <!--CSS-->
+    <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
+    <link rel="stylesheet" href="/css/fondo.css" type="text/css">
+    <link rel="stylesheet" href="/css/footer2.css" type="text/css">
+    <link rel="stylesheet" href="/css/listado2.css" type="text/css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style>
+
       <!--Kit FontAwesome--> 
       <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
+ 
+    <title>Contactos</title>
+  </head>
+  <body>
 
-      <!--BOOTSTRAP INICIAL-->
-      <%- include('./partials/bootstrap') %>
-</head>
+    <header>
+       <div class="bg-dark">
+        <div class="container navcont w-100" id="nav-gradient">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
 
-<%- include('./partials/nav') %>
+                
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav w-100">
+                        <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
+                    </div>
+                  </div>
 
-    <!--Aquí comienza el listado-->
-<main>
-    <h1>¿Necesitas ayuda más personalizada?</h1>
-    <h3 class="h3-Index">Te compartimos los siguientes números a los que podrás acudir si necesitas atención urgente.</h3>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navg navbar-nav w-100">
+                     <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
+                     <% if(locals.isLogged) { %>
+                     <a class="nav-item nav-link" href="/listado">Contactos</a>
+                    <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
+                    <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
+                    <% } else { %>
+                      <a class="nav-item nav-link" href="/listado">Contactos</a>
+                      <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
+                      <a class="nav-item nav-link" href="/users/registro">Registrate</a>
+                      <% } %>
+                  </div>
+                </div>
+              </nav>
+        </div>
+       </div>
+    </header>
 
-<div class="cont-listado">
+    <!--Estrellas-->   
 
-  <div class="cont-listado-hijo">
-    <img src="/img/lineadelavida.jpeg" style="width: 265px; position:relative; left: 20px;">
-<div class="cont-listado-hijo-text">
-    <h2>La línea de la vida</h2>
-    <div class="icon-flex">
-    <span class="fa-solid fa-phone"></span><h4 style="padding-top: 15px;">800 911 2000</h4>
-  </div>
-  <div class="icon-flex">
-    <span class="fa-solid fa-envelope"></span><h4 style="padding-bottom: 15px;">lalineadelavida@salud.gob.mx</h4>
-  </div>
-  <h4 style="padding-bottom: 15px;">Especialistas en atención a la salud mental, ofrecen servicios de atención a problemas como ansiedad, depresión o riesgo suicida, los 365 días del año.</h4>
-  </div>
-  </div>
-
-  <div class="cont-listado-hijo" style="text-align: center;">
-    <img src="/img/origen.jpeg" style="width: 265px; position:relative; left: 20px;">
-    <div class="cont-listado-hijo-text">
-    <h2>Fundación Origen</h2>
-    <div class="icon-flex">
-    <span class="fa-solid fa-phone"></span><h4 style="padding-top: 15px;">800 015 1617</h4>
-  </div>
-  <div class="icon-flex">
-    <span class="fa-solid fa-envelope"></span><h4 style="padding-bottom: 15px;">lineadeayudaorigen@origenac.org</h4>
-  </div>
-  <h4 style="padding-bottom: 15px;">Organización social experta en el tema de salud emocional. Ofrecen orientación psicológica, legal, médica y nutricional gratuita.</h4>
-  </div>
-  </div>
-
-  <div class="cont-listado-hijo">
-    <img src="/img/lineauam.png" style="width: 265px; position:relative; left: 20px;">
-    <div class="cont-listado-hijo-text">
-    <h2>Línea UAM</h2>
-    <div class="icon-flex">
-    <span class="fa-solid fa-phone"></span><h4 style="padding-top: 15px;">55 2555 8092</h4>
-  </div>
-  <div class="icon-flex">
-    <span class="fa-solid fa-phone"></span><h4 style="padding-top: 15px;">55 5804 4879</h4>
-  </div>
-  <div class="icon-flex">
-    <span class="fa-solid fa-phone"></span><h4 style="padding-top: 15px;">55 5804 5444</h4>
-  </div>
-<br>
-  <h4 style="padding-bottom: 15px;">Servicio gratuito de la UAM Azcapotzalco para atender la salud mental.<br>Horario: Lunes a viernes <br> 9:00 a 17:00 hrs</h4>
-  </div>
-  </div>
-
-  <div class="cont-listado-hijo" style="text-align: center;">
-    <img src="/img/consejo.png" style="width: 265px; position:relative; left: 20px;" >
-    <div class="cont-listado-hijo-text">
-    <h2>Consejo Ciudadano para la Seguridad y Justicia de la CDMX</h2>
-    <div class="icon-flex">
-    <span class="fa-solid fa-phone"></span><h4 style="padding-top: 15px;">55 5533 5533</h4>
-  </div>
-  <div class="icon-flex">
-    <span class="fa-solid fa-envelope"></span><h4 style="padding-bottom: 15px;">uncorreo@gmail.com</h4>
-  </div>
-  <h4 style="padding-bottom: 15px;">Apoyo psicológico inmediato y 24/7 en línea, ofrecen de 9 a 12 sesiones de terapia psicológica sin ningún costo.</h4>
-  </div>
-  </div>
-
-</div>
-<div style="margin-top: 200px;"></div>
-<img src="/img/Hojas1.png" class="hoja1">
-<img src="/img/Hojas3.png" class="hoja2">
-  </main>
-</body>
-<head>
-  <link rel="stylesheet" href="/css/footer.css" type="text/css">
-</head>
-
-  <!--BOOTSTRAP FINAL-->
-  <%- include('./partials/bootstrapjs') %>
-
-<footer style="padding:40px 40px">
-  <!--Logo Fun N Skate-->
-           <div style="display:flex; flex-direction:column; text-align: left; padding-left: 30px">
-              <img class="logo-footer" style="margin:20px 0 30px 0" src = '/img/Logo_Horizontal.png' alt='Logo'>
-             <!-- <p style="padding-left: 40px; font-size: 13px; opacity: 0.6">En Por Ti buscamos fomentar el autocuidado de la salud integral.</p>-->
-          </div>
-          
-          <!--Logotipos de redes sociales-->
-          <div class="caja-redes">
-              <h3 class="titulo-redes" style="padding-top: 50px; margin: -40px;">¡Síguenos!</h3>
-              <a href="facebook">
-                  <img class="redes" src = '/img/facebook.png' alt='facebook'>
-              </a>
-              <a href="instagram">
-                  <img class="redes" src = '/img/insta.png' alt='instagram'>
-              </a> 
-      
-          </div>
-          <!--Area de suscripción -->
+            <div class="scene" style="height: 100%; padding-bottom: 0!important; margin-bottom: 0!important;">
+                <script type="text/javascript">
+                    function stars(){
+                        let count = 100;
+                        let scene = document.querySelector('.scene');
+                        let i = 0;
+                        while(i < count){
+                            let star  = document.createElement("i");
+                            let x = Math.floor(Math.random() * window.innerWidth);
+                            let y = Math.floor(Math.random() * window.innerHeight);
+                            let duration = Math.random() * 10;
+                            let size = Math.random() * 2;
         
+                            star.style.opacity= 0.7;
+                            star.style.left = x+'px'; 
+                            star.style.top = y+'px'; 
+                            star.style.width = 1+size+'px'; 
+                            star.style.height = 1+size+'px'; 
+        
+                            star.style.animationDuration = 5+duration+'s';
+                            star.style.animationDelay = duration+'s';
+        
+                            scene.appendChild(star);
+                            i++
+                        }
+                    }
+                    stars()
+                </script>
+
+ <!--Beneficios prueba 2--> 
+ <main>
+ <div class="content" style="margin-top: 150px; margin-bottom: 100px; padding: 0 10px;">
+      <h2 style="margin-top: 100px;">¿Necesitas ayuda más personalizada?</h2>
+      <h3 class="h3-Index">Te compartimos los siguientes números a los que podrás acudir si necesitas atención urgente.</h3>
+  </div>
+
+  <div class="row justify-content-center">
+    <div class="col-10 col-xs-10 col-md-4 col-lg-3 mb-3" id="contact">
   
-          <div class="cont-list">
-      
-              <ul>
-                  <li>
-                      <a href="#sucursal1">Podcast</a>
-                  </li>
-                  <li>
-                      <a href="#sucursal2">Blog</a>
-                  </li>
-                  <li>
-                      <a href="#sucursal3">YouTube</a>
-                  </li>
-              </ul>
+      <div class="card text-center" style="margin-top: 0!important" id="first-card">
+        <img class="card-img-avatar rounded-circle" src="/img/contacto1.png" />
+        <div class="card-body">
+          <h5 class="card-title">La línea de la vida</h5>
+          <p>Especialistas en atención a la salud mental, ofrecen atención a problemas como ansiedad, depresión o riesgo suicida.
+        </p>
+        <div class="icon-flex">
+            <span class="fa-solid fa-phone"></span><h6 style="padding-top: 11px;">800 911 2000</h4>
           </div>
-        
-      
-</footer>
-
+        </div>
+      </div>
+  
+    </div>
+    <div class="col-10 col-xs-10 col-md-4 col-lg-3 mb-3">
+  
+      <div class="card text-center">
+        <img class="card-img-avatar rounded-circle" src="/img/contacto2.png"/>
+        <div class="card-body">
+          <h5 class="card-title">Fundación Origen</h5>
+          <p>Organización social experta en el tema de salud emocional. Ofrecen orientación psicológica, médica y nutricional gratuita.
+        </p>
+        <div class="icon-flex">
+            <span class="fa-solid fa-phone"></span><h6 style="padding-top: 11px;">800 015 1617</h4>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+    <div class="col-10 col-xs-10 col-md-4 col-lg-3 mb-3">
+  
+      <div class="card text-center">
+        <img class="card-img-avatar rounded-circle" src="/img/contacto3.png"/>
+        <div class="card-body">
+          <h5 class="card-title">Línea UAM</h5>
+          <p>Servicio gratuito de la UAM Azcapotzalco para atender la salud mental.
+            Horario: Lunes a viernes
+            9:00 a 17:00 hrs</p>
+            <div class="icon-flex">
+                <span class="fa-solid fa-phone"></span><h6 style="padding-top: 11px;">55 2555 8092</h4>
+              </div>
+          </div>
+        </div>
+      </div>
+  
+    <div class="col-10 col-xs-10 col-md-4 col-lg-3 mb-3">
+  
+      <div class="card text-center" id="last-card">
+        <img class="card-img-avatar rounded-circle" src="/img/contacto4_1.png" />
+        <div class="card-body">
+          <h5 class="card-title">N.U.B.E.</h5>
+          <p>
+            Centros especializados en salud mental y emocional. Su finalidad es otorgar apoyo a bajo costo y de alto impacto.
+          </p>
+          <div class="icon-flex">
+            <span class="fa-solid fa-phone"></span><h6 style="padding-top: 11px;">5795 2054 Ext. 5789</h4>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  </div>
+  <div style="background-color: linear-gradient(rgba(33, 31, 72, 0.149) 20%, rgb(33, 31, 72) 100%); position: relative; bottom: 0;;">
+  <div style="height: 100px;">
+</div>
+<%- include('./partials/footer2') %>
+</div>
+</div>
+</main>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
 </html>
-   
-     
