--- a/src/views/registro2.ejs
+++ b/src/views/registro2.ejs
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
     <link rel="stylesheet" href="/css/footer2.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" href="/css/objetivos.css">
+    <link rel="stylesheet" href="/css/check.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -25,44 +27,47 @@
       <!--Kit FontAwesome--> 
       <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
  
-    <title>Inicio</title>
+    <title>Registro</title>
   </head>
+
+
+  <header>
+    <div class="bg-dark">
+     <div class="container navcont w-100" id="nav-gradient">
+         <nav class="navbar navbar-expand-lg navbar-dark">
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+             </button>
+
+             
+             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                 <div class="navbar-nav w-100">
+                     <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
+                 </div>
+               </div>
+
+             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+               <div class="navg navbar-nav w-100">
+                  <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
+                  <% if(locals.isLogged) { %>
+                  <a class="nav-item nav-link" href="/listado">Contactos</a>
+                 <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
+                 <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
+                 <% } else { %>
+                   <a class="nav-item nav-link" href="/listado">Contactos</a>
+                   <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
+                   <a class="nav-item nav-link" href="/users/registro">Registrate</a>
+                   <% } %>
+               </div>
+             </div>
+           </nav>
+     </div>
+    </div>
+
+  <div class="fondo">
+    <div class="main">
   <body>
 
-    <header>
-       <div class="bg-dark">
-        <div class="container navcont w-100" id="nav-gradient">
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-
-                
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav w-100">
-                        <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
-                    </div>
-                  </div>
-
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navg navbar-nav w-100">
-                     <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
-                     <% if(locals.isLogged) { %>
-                     <a class="nav-item nav-link" href="/listado">Contactos</a>
-                    <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
-                    <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
-                    <% } else { %>
-                      <a class="nav-item nav-link" href="/listado">Contactos</a>
-                      <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
-                      <a class="nav-item nav-link" href="/users/registro">Registrate</a>
-                      <% } %>
-                  </div>
-                </div>
-              </nav>
-        </div>
-       </div>
-
-    </header>
 
  <!--PARTE 1-->
 
@@ -74,7 +79,7 @@
 
  <div class="registro1">
 
-    <form action="/users/registro" method="POST" class="main" style="padding-bottom: 200px">
+    <form action="/users/registro" method="POST" class="main" style="padding-bottom: 200px; margin-bottom: 80px;">
       <div class="login-box" id="register-box">
           <h2>¿Listo para hacer algo por ti hoy?</h2>
 
@@ -129,7 +134,7 @@
             <a href="#objetivos"><button type="button" class="registerbutton" style="text-align:center;">Registrarme</button></a>
         </div>
         <div>
-            <p class="p" style="margin-top: 60px"><br>¿Ya tienes una cuenta? <br> <a href="/users/login"> <span>Inicia sesión</span></p></a>
+            <p class="p" style="margin-top: 60px"><br>¿Ya tienes una cuenta? <br> <a href="/users/login"> <span style="text-decoration:underline">Inicia sesión</span></p></a>
         </div>
         </div>
         </td>
@@ -147,8 +152,65 @@
 </div>
 </section>
 
-<%- include('./partials/footer2') %>
+
+                      <!--PARTE 2 OBJETIVOS-->
+                      <div class="objetivos-img">
+                      <div class="objetivos">
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                      <div class="titles" style="margin-top:40px">
+                        <h4 class="objetivos-title">Elije un objetivo</h1>
+                            <h1 class="objetivos-text">¿Qué deseas mejorar?</h1>
+                        </div>
+                
+                        <br>
+                        <br>
+                       
+                          <div class="contenedor-objetivos" style="margin-top: -10px;">
+      
+                            <div>
+                        <label class="radio-container">
+                          <input name="objetivo" value="saludfisica" type="radio" class="radio-hidden"> 
+                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1658344697/Por%20Ti/fisica_t75jjc.svg" class="radio-image">
+                        </label>
+                      <h3>Salud física</h3>
+                      </div>
+                
+                      <div>
+                        <label class="radio-container">
+                          <input name="objetivo" value="saludmental" type="radio" class="radio-hidden">
+                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1658344692/Por%20Ti/mental_kbj7zw.svg" class="radio-image">
+                        </label>
+                        <h3>Salud mental</h3>
+                      </div>
+                   
+                
+                      <div>
+                        <label class="radio-container">
+                          <input name="objetivo" value="saludsocial" type="radio" class="radio-hidden">
+                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1658344686/Por%20Ti/social_myuji4.svg" class="radio-image">
+                        </label>
+                        <h3>Salud social</h3>
+                        </div>
+                      </div>
+      
+                       <div>
+                        <a href="/users/misejercicios"><button type="submit" class="button-register">Continuar</button></a>
+                      </div>
+                        <br>
+                        <br>
+                </form>
+                <%- include('./partials/footer2') %>  
+                <div style="position: relative; bottom: 0; margin-top: 50px;">
+                  </div>
+              </div>
+            </div>
 </main>
+</div>
+</div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
