--- a/src/views/registro2.ejs
+++ b/src/views/registro2.ejs
@@ -131,7 +131,7 @@
             <!--Boton-->
             <div class="padre">
                 <div class="hijo">
-            <a href="#objetivos"><button type="button" class="registerbutton" style="text-align:center;">Registrarme</button></a>
+            <a href="#objetivos"><button type="button" class="registerbutton" style="text-align:center;">Continuar</button></a>
         </div>
         <div>
             <p class="p" style="margin-top: 60px"><br>¿Ya tienes una cuenta? <br> <a href="/users/login"> <span style="text-decoration:underline">Inicia sesión</span></p></a>
@@ -152,9 +152,8 @@
 </div>
 </section>
 
-
                       <!--PARTE 2 OBJETIVOS-->
-                      <div class="objetivos-img">
+                      <div class="objetivos-img" id="objetivos">
                       <div class="objetivos">
                         <br>
                         <br>
@@ -173,7 +172,7 @@
                             <div>
                         <label class="radio-container">
                           <input name="objetivo" value="saludfisica" type="radio" class="radio-hidden"> 
-                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1658344697/Por%20Ti/fisica_t75jjc.svg" class="radio-image">
+                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1662400641/Por%20Ti/objetivo2_bjpker.svg" class="radio-image">
                         </label>
                       <h3>Salud física</h3>
                       </div>
@@ -181,7 +180,7 @@
                       <div>
                         <label class="radio-container">
                           <input name="objetivo" value="saludmental" type="radio" class="radio-hidden">
-                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1658344692/Por%20Ti/mental_kbj7zw.svg" class="radio-image">
+                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1662400637/Por%20Ti/objetivo1_s7fmuc.svg" class="radio-image">
                         </label>
                         <h3>Salud mental</h3>
                       </div>
@@ -190,14 +189,14 @@
                       <div>
                         <label class="radio-container">
                           <input name="objetivo" value="saludsocial" type="radio" class="radio-hidden">
-                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1658344686/Por%20Ti/social_myuji4.svg" class="radio-image">
+                          <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1662400808/Por%20Ti/objetivo3_ocroju.svg" class="radio-image"  id="objetivo3">
                         </label>
                         <h3>Salud social</h3>
                         </div>
                       </div>
       
                        <div>
-                        <a href="/users/misejercicios"><button type="submit" class="button-register">Continuar</button></a>
+                        <a href="/users/misejercicios"><button type="submit" class="button-register">Registrarme</button></a>
                       </div>
                         <br>
                         <br>
