--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,7 +11,15 @@
       
     <!--CSS--> 
     <link rel="stylesheet" type="text/css" href="/css/login.css">
-    <link rel="stylesheet" href="/css/navbar.css" type="text/css">
+
+ <!-- Bootstrap CSS -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+ <style>
+     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+     @import url('https://fonts.googleapis.com/css2?family=Fredoka:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+ </style>
 
     <!--Tipografías--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,20 +29,23 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<header>
-        
-</header>
+
+<%- include('./partials/nav') %>
 
 <body>
     <div class="fondo">
 
-      <%- include('./partials/nav') %>
-
   <div class="main">
     <br>
+    <section class="log-sec" style="margin-top: -30px;">
+
+<div class="container">
+  <div class="row justify-content-md-center">
+  <div class="col-xs-4 col-sm-5 col-md-7 col-lg-7">
+
           <form action="/users/login" method="POST" class="main">
             <!--Prueba-->
-            <div class="login-box">
+            <div class="login-box" id="login-margin" style="padding-bottom:80px; margin-top: -80px;">
                 <h2>¿Listo para hacer algo por ti hoy?<h6 class="body-text">Ingresar</h6></h2>
                 <form>
                   <div class="user-box">
@@ -56,15 +67,18 @@
                       </div>
                       <% } %></label>
                   </div>
-        
-                <button type="submit" style="text-align:center; left: 30%; right: 30%; position: absolute">Iniciar sesión</button>
+                  <div class="padre" style="top: 80px">
+                    <div class="hijo">
+                <button type="submit" class="button-register" style="text-align:center;">Iniciar sesión</button>
                 <br>
                 <br>
                 <br>
+              </div>
                <!-- <div style="display: flex; flex-direction: row; align-items: baseline;"><input type="checkbox"></input><p class="p" style="margin-left: 15px; padding-left: 0;">Recordar mi usuario</></div>-->
-                <p class="p">¿Aún no tienes una cuenta?  </p>
-                  <a href="/users/registro" style="text-align:center; left: 40%; right: 40%; position: absolute; margin-top: -20px;">Registrate aquí</a>
-            <!--[if mso]>&nbsp;<![endif]-->
+                <div>
+                  <p class="p">¿Aún no tienes una cuenta? <br> <a href="/users/login"> <span style="text-decoration:underline; color: lavender;">Registrate</span></p></a>
+              </div>  <!--[if mso]>&nbsp;<![endif]-->
+            </div>
             </td>
           </tr>
         </table>
@@ -79,6 +93,15 @@
           </div>
           <!--Finaliza prueba-->
       </div>
+</div>
+  </div>
+    </div>
+  </section>
+  <%- include('./partials/footer2') %>  
+  <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
-<%- include('./partials/footer') %>
 </html>
