--- a/src/views/login2.ejs
+++ b/src/views/login2.ejs
@@ -63,7 +63,6 @@
            </nav>
      </div>
     </div>
-  </header>
 
   <div class="fondo">
     <div class="main">
@@ -154,7 +153,7 @@
 </section>
 
                       <!--PARTE 2 OBJETIVOS-->
-                      <div class="objetivos-img" id="objetivos">
+                      <div class="objetivos-img">
                       <div class="objetivos">
                         <br>
                         <br>
@@ -197,12 +196,14 @@
                       </div>
       
                        <div>
-                        <a href="/users/login"><button type="submit" class="button-register">Continuar</button></a>
+                        <a href="/users/misejercicios"><button type="submit" class="button-register">Continuar</button></a>
                       </div>
                         <br>
                         <br>
                 </form>
                 <%- include('./partials/footer2') %>  
+                <div style="position: relative; bottom: 0; margin-top: 50px;">
+                  </div>
               </div>
             </div>
 </main>
