--- a/src/public/css/alimentos.css
+++ b/src/public/css/alimentos.css
@@ -9,20 +9,27 @@ body{
     color: white;
     font-family: 'Poppins';
     text-align: center;
-    padding-right: 250px;
-    padding-left: 250px;
 }
 
-.titles h1{
+.titles-h1{
     margin-top: 120px;
     font-size: 36px;
     }
+
+    .h2-ansiedad{
+        text-align: center;
+        font-family: 'Poppins';
+        text-align: center;
+        margin: 0 auto;
+        color: white;
+    }
     
-.titles p
+.titles-p
     { 
-      font-size: 1.2em; 
-      font-family: 'Nunito', sans-serif; 
-      color: white;
+      font-size: 1em!important; 
+      font-family: 'Nunito', sans-serif!important; 
+      color: white!important;
+      padding-top: 15px;
     }
 
 .Title-flex{
@@ -30,14 +37,13 @@ body{
     flex-direction: row;
     align-items: left;
     margin-top: 50px;
-    margin-left: 50px;
     color: white;
 }
 
 .Title-flex h2{
-    font-size: 21pt;
-   font-weight: 800;
-   color:rgb(253, 242, 224);
+    font-size: 21pt!important;
+   font-weight: 800!important;
+   color:rgb(253, 242, 224)!important;
 }
 
 .Title-flex img{
@@ -58,17 +64,13 @@ body{
   }
   
   .Section-list{
-    width: 40vw;
-    padding-left: 50px;
-    margin-right: 100px;
-    height: 100vh;
+    margin: 0 auto;
     }
     
     .Section-detail{
       width: 60vw;
-      padding-right: 100px;
+      padding-right: 50px;
       margin-top: 100px;
-      height: 100vh;
       }
   
   .App-logo {
@@ -107,14 +109,57 @@ body{
   }
   
   .App-p{
-    width: 300px;
     text-align: left;
-    margin-left: 100px;
     position: relative;
     top: -15px;
   }
 
+.Detalle-flex{
+    display: flex;
+    align-items: center;
+}
 
+.Detalle-flex h3{
+    color:blanchedalmond;
+}
+
+.Detalle-flex img{
+    width: 50%;
+    border-radius: 40px;
+}
+
+.h3{
+    color:blanchedalmond;
+}
+
+
+.Detalle-title{
+    color:blanchedalmond;
+    font-family: 'Nunito';
+    font-weight: 700;
+    font-size: 1.8em;
+    margin-top: -15px;
+    margin-bottom: 15px;
+}
+
+.Detalle-title-h3{
+    color:blanchedalmond;
+    font-family: 'Nunito';
+    font-weight: 700;
+    font-size: 1.4em;
+    margin-top: 15px;
+}
+
+.Recetas-cont{
+    height: 375px;
+    display: block;
+    overflow-y: none;
+    scroll-behavior: smooth;
+}
+
+#col-cen{
+    margin: 0 auto;
+}
 
 .Detalle-flex{
     display: flex;
@@ -139,46 +184,15 @@ body{
 }
 
 .Recetas-cont{
-    height: 375px;
+    height: 380px;
     display: block;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
-}
-
-.Detalle-flex{
-    display: flex;
-    align-items: center;
-}
-
-.Detalle-flex h3{
-    color:blanchedalmond;
-}
-
-.Detalle-flex img{
-    width: 50%;
-    border-radius: 40px;
-}
-
-.h3{
-    color:blanchedalmond;
-}
-
-.Detalle-title{
-    color:blanchedalmond;
-}
-
-.Recetas-cont{
-    height: 375px;
-    display: block;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
+    overflow-y: none;
 }
 
 .receta{
     font-family: Nunito;
     font-weight: 500;
     text-align: left;
-    margin-left: 90px;
     padding-right: 15px;
     margin-bottom: 15px;
     display: flex;
@@ -204,15 +218,15 @@ body{
 }
 
 .receta p{
-    margin-left: 10px;
     text-align: center;
 }
 
-.receta-fav-icon{
+.Receta-fav-icon{
     position: relative;
     z-index: 1;
     top: 25px;
     right: -15px;
+    padding-right: 8px;
     background-color: rgb(255, 102,121);
     width: 50px;
     height: 30px;
@@ -221,11 +235,11 @@ body{
     border-radius: 8px 0 8px 8px;
 }
 
-.receta-fav-icon:hover{
+.Receta-fav-icon:hover{
     background-color: rgb(215, 86, 101);
 }
 
-.receta-fav-icon span{
+.Receta-fav-icon span{
     padding: 10px;
     width: 5px;
     text-align: center;
@@ -276,3 +290,58 @@ body {
         text-align: center;
         cursor: pointer;
      }
+
+     li{
+        color: white;
+        font-family: 'Nunito';
+     }
+
+     @media(max-width: 605px){
+        .Section-list{
+        margin: 0;
+        }
+        .row{
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+        }
+        .back{
+            margin-top: 100px!important;
+        }
+     }
+     @media(max-width: 752px){
+       .Detalle-flex{
+            flex-direction: column;
+        }
+        .Detalle-title{
+        text-align: center;
+        }
+        .Detalle-flex img{
+          width: 90%;
+        }
+        .Detalle-flex-li{
+        align-self: flex-start;
+          }
+     .receta{
+        width: 375px;
+        margin: 10px auto;
+    }
+    .Title-flex {
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+    .Receta-fav-icon{
+    right: -15px;
+    }
+
+    .Receta-fav-icon span{
+    right: 25%;
+    }
+    .App-p{
+        text-align: center!important;
+    }
+    .Section-detail{
+        margin-top: 150px;
+        }
+    }
