--- a/src/public/css/ejercicios.css
+++ b/src/public/css/ejercicios.css
@@ -4,7 +4,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box!important;
 }
 
 main{
@@ -12,6 +12,7 @@ main{
     background: linear-gradient(rgba(40, 37, 89), #111425);
     box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .ejercicios-top-contenedor-texto{
@@ -31,47 +32,48 @@ main{
 h1{
     font-family: 'Poppins', sans-serif;
     font-size: 52px;
-    color: white;
-    text-align: left;
+    color: white!important;;
+    text-align: left!important;;
 }
 
 h2{
     font-family: 'Poppins', sans-serif;
     font-size: 32px;
-    color: white;
-    text-align: center;
+    color: white!important;;
+    text-align: center!important;;
 }
 
 h3{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif!important;
     font-size: 32;
-    font-weight: 400;
-    color: white;
-    text-align: center;
+    font-size: 14pt!important;
+    font-weight: 400!important;
+    color: white!important;;
+    text-align: center!important;;
 }
 
 h4{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif!important;
     font-size: 26;
     font-weight: 400;
-    color: white;
-    text-align: center; 
+    color: white!important;;
+    text-align: center!important;; 
 }
 
 h6{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif!important;
     font-size: 18px;
     font-weight: 300;
-    color: rgb(203, 203, 243);
-    text-align: left; 
+    color: rgb(203, 203, 243)!important;;
+    text-align: left!important;; 
 }
 
 p{
-    font-family: 'Nunito', sans-serif;
-    font-size: 32;
+    font-family: 'Nunito', sans-serif!important;;
+    font-size: 32px;;
     font-weight: 400;
-    color: white;
-    text-align: center; 
+    color: white!important;;
+    text-align: center!important;; 
 }
 
 
@@ -95,7 +97,7 @@ p{
 }
 
 .frase-fondo-texto h2{
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', sans-serif!important;;
   font-weight: 300;
   font-size: 24px;
 }
@@ -124,6 +126,10 @@ p{
     width: 370px;
     border-radius: 30px;
     background-color: rgba(59, 55, 131, 0.8);
+}
+
+.fa-calendar{
+    color: rgba(59, 55, 131);
 }
 
 .ejercicios-top-contenedor-hijo img:hover,
@@ -204,10 +210,14 @@ span{
 }
 
 .fa-heart{
-    color:rgb(138, 52, 52)
+    color:rgb(138, 52, 52)!important;
 }
 
-button{
+.col-margin{
+    margin-right: 20px;
+}
+
+.ejercicios-btn{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: medium;
@@ -215,12 +225,12 @@ button{
     text-decoration: none;
     border: none;
     padding: 15px;
-    width:  16em;
+    width:  20em;
     background-color: rgb(254, 223, 200);
     color: rgb(65, 64, 105);
     }
     
-    button:hover{
+    .ejercicios-btn:hover{
     background-color: rgba(254, 223, 200, 0.8);
     transition:background-color 0.3s ease-in-out;
     cursor: pointer;
@@ -248,3 +258,174 @@ button{
 text-decoration: none;
 
   }
+
+.ejercicios-h2{
+    margin-top: 100px;
+    font-family: 'Poppins', sans-serif!important;
+    font-weight: 700!important;
+}
+
+.ejercicios-h{
+    margin-top: 25px;
+}
+
+#chip-hija1{
+    margin-right: 0px;
+}
+
+  @media(max-width: 800px){
+    #frase-fondo-img1{
+        left: -150px!important;
+    }
+    #frase-fondo-img2{
+        right: -150px!important;
+        box-sizing: border-box;
+    }
+    .frase-fondo-texto{
+        top: 30%;
+        text-align: center;
+        width: 60%;
+        left: 20%;
+    }
+    .ejercicios-top-contenedor{
+        display: flex;
+        flex-direction: column;
+        top: 10px;
+        width: auto;
+        height: fit-content;
+        padding: 20px;
+        white-space: normal;
+    }
+    .ejercicios-top-contenedor-hijo{
+        margin-top: 20px;
+    }
+    .ejercicios-h2{
+        margin-top: 20px!important;
+        text-align: center;
+    }
+    .ejercicios-h3{
+        margin-top: 15px!important;
+    }
+    .chips{
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        z-index: 100;
+        margin-top: 50px;
+        margin-bottom: 5px;
+        gap: 20px;
+        text-align: center;
+    }
+    #chip-hija1{
+        margin-right: 0!important;
+    }
+    .chip-hija{
+        margin: 0 auto;
+    }
+  }
+
+  .row-b{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    margin: 50px auto;
+    padding: 20px 0s;
+  }
+  .col-4 button{
+    margin-right: 10px;
+    width: 15em;
+  }
+
+  .texto-ayuda{
+    margin-top: -25px;
+  }
+
+  #frase-fondo-img1-1{
+    display: none;
+  }
+
+  #frase-fondo-img2-2{
+    display: none;
+  }
+
+  body{
+    margin-top: -5px!important;
+  }
+
+  .col-margin{
+    margin-top: 50px;
+  }
+  .col-margin2{
+    margin-top: 50px;
+  }
+
+  @media(max-width: 515px){
+    .col-4 button{
+        margin-right: 10px;
+      }
+      .row-b{
+flex-direction: column;
+      }
+    .col-4{
+        margin-bottom: 20px;
+    }
+  }
+
+
+  @media(min-width: 1100px) and (max-width: 1145px){
+    .ejercicios-top-contenedor-hijo{
+        width: 350px;
+        border-radius: 25px;
+    }
+  }
+
+  @media(min-width: 800px) and (max-width: 1099px){
+    .ejercicios-top-contenedor-hijo{
+        width: 260px;
+        border-radius: 20px;
+    }
+  }
+
+  @media(min-width: 950px) and (max-width: 1094px){
+    .ejercicios-top-contenedor-hijo{
+        width: 300px!important;
+        border-radius: 20px;
+    }
+  }
+
+@media(max-width: 800px){
+    #frase-fondo-img1{
+        display: none;
+    }
+    #frase-fondo-img2{
+        display: none;
+    }
+    #frase-fondo-img1-1{
+        display: block;
+    }
+    #frase-fondo-img2-2{
+        display: block;
+      }
+}
+
+@media(max-width: 994px){
+    body{
+        margin-top: 110px!important;
+      }
+      .col-margin{
+        margin-right: 0px;
+      }
+      #btn-extra{
+        margin-bottom: 20px;
+      }
+      .col-margin2{
+        margin-top: 0px;
+      }
+    }
+
+    @media(min-width: 650px) and (max-width: 996px){
+          .col-margin2{
+            margin-top: 50px!important;
+          }
+        }
