--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body{font: 14px "Open Sans", serif; float: left; height: 100%; position: relative; width: 100%;
-    background: linear-gradient(rgba(40, 37, 89), #111425);}
+    background: linear-gradient(rgba(40, 37, 89), #111425);
+    }
 
 main{
     background: linear-gradient(rgba(40, 37, 89), #111425);
@@ -24,18 +25,30 @@ main{
     justify-content: center;
     position: relative;
     height: 400px;
-    background: rgb(20,0,36);
     text-align: center;
     padding: 0;
     box-sizing: border-box;
     background-repeat: no-repeat;
     background-position-y: -5px;
     background-size: cover;
+    background: rgba(20, 0, 36, 0);
 }
 
 .datos-perfil h3 h1{
     font-family: 'Poppins', sans-serif;
     color: white;
+}
+
+.profile-h3{
+font-family: 'Nunito', sans-serif;
+font-size: 18pt;
+font-weight: 300;
+}
+
+.profile-h1{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 36pt;
 }
 
 .buttonBanner{
@@ -70,25 +83,25 @@ h2{font-family: 'Poppins', sans-serif;
 .row{float: left; 
     width: 100%;}
 
-/*= timeline css for data in one side =*/
-.timeline{font-family: 'Nunito', sans-serif; float: left; width: 90%; margin: 40px 5%; padding-left: 40px; position: relative; border-left: 1px solid #ccc; box-sizing: border-box;}
-.timeline:before, .timeline:after{content: ""; width: 16px; height: 16px; position: absolute; left: -11px; border-radius: 50px;}
-.timeline:before{top: -18px;}
-.timeline:after{bottom: -18px;}
-.timeline li{background-color: rgba(0, 0, 0, 0.28);  border-radius: 50px; float: left; margin-top: 50px; padding: 10px; position: relative; width: 100%;}
-.timeline li:first-child{margin-top: 0;}
-.timeline li:before{content: ""; width: 40px; height: 1px; background-color: #ccc; position: absolute; top: 50%; left: -41px;}
-.timeline li:after{content: ""; width: 7px; height: 7px; background-color: #ccc; position: absolute; top: 50%; margin-top: -3px; left: -45px;}
-.timeline-description {border-radius: 50px; text-align: left;}
-.timeline-description p h2{margin-top: 15px;}
-.timeline-description p:first-child{margin-top: 0;}
+    .navbar-toggler-icon{
+        margin-left: 10px;
+    }
 
-
-.a-session{
-    color: lavender;
-    text-align: center;
-    font-family: 'Nunito', sans-serif;
-    font-size: 21px;
-    margin: 0 auto;
-    text-decoration: underline;
+.ejercicios-box-cont2{
+    display: flex;
+    flex-direction: row;
 }
+
+@media(max-width: 800px){
+    .ejercicios-h2{
+        margin-top: 50px!important;
+    }
+}
+@media(max-width: 994px){
+    body{
+        margin-top: 0px!important;
+      }
+      .gradient-profile{
+        margin-top: 100px;
+      }
+    }
