--- a/src/public/css/respiracion.css
+++ b/src/public/css/respiracion.css
@@ -9,6 +9,10 @@
     --timing: 8s;
 }
 
+html{
+    margin-top: 80px;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -20,7 +24,7 @@ body {
 }
 
 body h1{
-    margin-top: 80px;
+    margin-top: 50px;
     font-family: 'Poppins', sans-serif;
     font-size: 36px;
 }
@@ -31,6 +35,8 @@ main, section {
     display: grid;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
+    text-align: center;
 }
 
 section {
@@ -43,8 +49,9 @@ section {
     width: var(--small);
     height: var(--small);
     border-radius: calc( var(--small) / 2);
-    display: inline-block;
-    animation: breath var(--timing) ease infinite none running
+    display: inline-block!important;
+    animation: breath var(--timing) ease infinite none running;
+    margin: 0 auto;
 }
 
 input {
@@ -112,7 +119,11 @@ label {
  }
 
 
-
+ @media(max-width: 991px){
+    .h2-ansiedad{
+      margin-top: 180px!important;
+    }
+}
 
 @keyframes move-twink-back {
     from {background-position:0 0;}
