--- a/src/public/css/tapping.css
+++ b/src/public/css/tapping.css
@@ -4,8 +4,12 @@
     color: white;
 }
 
-main{
-    margin-left: 150px;
+.navbar-toggler-icon{
+    margin-left: 10px;
+}
+
+.container{
+    padding-left: 3%!important;
 }
 
 p{ font-size: 1.2em; font-family: 'Nunito', sans-serif; }
@@ -15,29 +19,36 @@ body{
 }
 
 .instruccion{
-    border-radius: 40px;
-    text-align: left;
+    border-radius: 30px;
+    text-align: left!important;
     background-color: rgba(203, 177, 227, 0.769);
-    padding: 25px;
-    margin-bottom: 25px;
+    padding: 25px 0px 25px 25px;
+    margin-bottom: 15px;
 }
 
-aside {
-    margin-left: 200px;
+.instruccion h2{
+    text-align: left!important; 
 }
 
 h2{
-    font-family: 'Nunito', sans-serif;
-    font-weight: 500px;
+    font-family: 'Nunito', sans-serif!important;
+    font-weight: 500px!important;
     text-align: left;
-    font-size: 14pt;
+    font-size: 14pt!important;
+}
+
+.title-p{
+    font-family: 'Nunito', sans-serif;
+    text-align: center!important;
+    font-size: 12pt;
+    color: white;
 }
 
 p {
     font-family: 'Nunito', sans-serif;
-    color: white;
-    text-align: left;
+    text-align: left!important;
     font-size: 12pt;
+    padding-bottom: -10px!important;
 }
 
 li{
@@ -52,23 +63,14 @@ ul{
     font-size: 21px;
 }
 
-.cont{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.cont-2{
+    text-align: center;
+    margin: 0 auto;
 }
 
-.cont-1{
-width: 40%;
-}
 
 ::-webkit-scrollbar {
     display: none;
-    }
-
-.cont-2{
-    width: 60%;
-    margin-left: 50px;
     }
 
     *{
