--- a/src/views/5sentidos2.ejs
+++ b/src/views/5sentidos2.ejs
@@ -11,26 +11,41 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <!--CSS-->
+  <link rel="stylesheet" href="/css/estilosindex.css">
+  <link rel="stylesheet" href="/css/ejerciciostext.css">
   <link rel="stylesheet" href="/css/5sentidos2.css">
   <link rel="stylesheet" href="/css/navbar.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
- 
+
+
   <!--Kit FontAwesome--> 
   <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
- 
-  <%- include('./partials/nav') %>  
+
 <main>
-   <!-- Tittle -->
-  <div class="titles">
-    <h2 style="margin-top: 100px;">5-4-3-2-1 sentidos</h2>
-    <br>
-    <p>Es una técnica auto-calmante para aliviar la ansiedad, </p>
-    <p>consiste en utilizar los cinco sentidos para tomar conciencia del cuerpo.</p>
+
+    <!-- Tittle -->
+    <div class="container ejercicios-text" style="color: white;">
+        <div class="row align-items-center justify-content-center">
+          <div class="col">
+          </div>
+          <div class="col-8">
+            <h2 class="h2-ansiedad">5-4-3-2-1 sentidos</h2>
+            <br>
+            <p>Es una técnica auto-calmante para aliviar la ansiedad, </p>
+            <p>consiste en utilizar los cinco sentidos para tomar conciencia del cuerpo.</p>
+            <br>
+          </div>
+          <div class="col">
+          </div>
+        </div>
+        <br>
+    </div>
   </div>
-  
+
+   <!-- Tittle -->
   <body>
  
-        <div class="container">
+        <div class="container-sen">
             <div class="progress-bar">
                 <div class="step">
                     <p>Vista</p>
@@ -248,7 +263,11 @@ function initMultiStepForm() {
 }
 
         </script>
-          
+         <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
     </body>
     <div class="back">
         <a href="/misejercicios"><button>Volver</button></a>
