--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -11,8 +11,19 @@
       <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
       
       <!--CSS--> 
+      <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
       <link rel="stylesheet" href="/css/ejercicios.css" type="text/css">
       <link rel="stylesheet" href="/css/ejercicios-cont.css" type="text/css">
+      <link rel="stylesheet" href="/css/header.css" type="text/css">
+
+ <!-- Bootstrap CSS -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+ <style>
+     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+     @import url('https://fonts.googleapis.com/css2?family=Fredoka:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+ </style>
 
       <!--Tipografías--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,23 +39,63 @@
      <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
       <!--Kit FontAwesome--> 
      <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
+  
     </head>
+
+
+    <header>
+      <div class="bg-dark">
+       <div class="container navcont w-100" id="nav-gradient">
+           <nav class="navbar navbar-expand-lg navbar-dark">
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                 <span style="margin-left: 10px" class="navbar-toggler-icon"></span>
+               </button>
+
+               
+               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                   <div class="navbar-nav w-100">
+                       <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
+                   </div>
+                 </div>
+
+               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                 <div class="navg navbar-nav w-100">
+                    <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
+                    <% if(locals.isLogged) { %>
+                    <a class="nav-item nav-link" href="/listado">Contactos</a>
+                   <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
+                   <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
+                   <% } else { %>
+                     <a class="nav-item nav-link" href="/listado">Contactos</a>
+                     <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
+                     <a class="nav-item nav-link" href="/users/registro">Registrate</a>
+                     <% } %>
+                 </div>
+               </div>
+             </nav>
+       </div>
+      </div>
+   </header>
+
+
 
 <body style="overflow-x: hidden;">
 
   <!--Corazón-->
-  <script>
-   let i =document.getElementByClass("card-ejercicio-heart");
-   i.innerHTML += "<i class="fa-solid fa-heart"></i>";
-    </script>
 
-        <!--Frase--> 
+      
     <div class="frase-fondo">
-      <div class="frase-fondo-img" style="position: absolute; top: 3px; left: 0px; height: 0%; z-index: 0;" >
+      <div class="frase-fondo-img" id="frase-fondo-img1" style="position: absolute; top: 3px; left: 0px; height: 0%; z-index: 0;" >
         <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1661447881/Por%20Ti/Hojas1_frase_cskv3j.png" style="height: 385px; padding-top: 40px;"> 
       </div>
-      <div class="frase-fondo-img" style="position: absolute; right: 0px; height: 0%; z-index: 0;" >
+      <div class="frase-fondo-img" id="frase-fondo-img1-1" style="position: absolute; top: 30px; left: 0px; height: 0%; z-index: 0;" >
+        <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1662665840/Por%20Ti/hoja1-frase-i_zkm8cv.svg" style="height: 385px; padding-top: 40px;"> 
+      </div>
+      <div class="frase-fondo-img" id="frase-fondo-img2" style="position: absolute; top: 3px; right: 0px; height: 0%; z-index: 0;">
         <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1661447881/Por%20Ti/Hojas2_frase_y6xkc8.png" style="height: 385px; padding-top: 40px;"> 
+      </div>
+      <div class="frase-fondo-img" id="frase-fondo-img2-2" style="position: absolute; top: 30px; right: 0px; height: 0%; z-index: 0;" >
+        <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1662665840/Por%20Ti/hoja1-frase-d_ag3y3k.svg" style="height: 385px; padding-top: 40px;"> 
       </div>
         <div class="frase-fondo-texto" style="position: relative; z-index: 1;"> 
           <script>
@@ -79,6 +130,7 @@
 
         <!--Top containers-->
         <main>
+
         <div class="ejercicios-top-contenedor">
 
           <a href="/ejercicios/alimentos"><div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
@@ -113,8 +165,8 @@
         
 
       <!--Código ejercicios-->
-      <h2 style="margin-top: 100px;">Mis ejercicios</h2>
-      <h3 style="margin-top: 25px;">Desliza la pantalla a la izquierda para ver más ejercicios.</h2>
+      <h2 class="ejercicios-h2">Mis ejercicios</h2>
+      <h3 class="ejercicios-h3" style="padding: 0 15px">Desliza la pantalla a la izquierda para ver más ejercicios.</h2>
 
       <div class="ejercicios-box-cont" style="margin-top: 50px; padding-left: 75px;">
 
@@ -149,23 +201,25 @@
               <h2>Diario emocional</h2><h6>12 min</h6>
               <h4>Lleva un registro de tus emociones.</h4></div></div>
             </div>
-              <h2 style="margin-top: 100px;">Actividades cortas</h2>
-  <div class="ejercicios-box-cont2" style="margin-top: 50px; padding-left: 75px; overflow: hidden;">
+
+            <h2 class="ejercicios-h2">Actividades cortas</h2>
+  <div class="ejercicios-box-cont" style="margin-top: 50px; padding-left: 75px; overflow: auto; text-align: center;">
     
-    <a href="/ejercicios/5sentidos"><div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/sentidos-card_fjbkx6.svg); width:373px;"><div class="card-ejercicio-text">
-      <h2>Técnica de los 5 sentidos</h2><h6>12 min</h6>
-  <h4>Técnica auto-calmante para aliviar la ansiedad.</h4></div></div></a>
-   
-  <a href="/ejercicios/arteterapia">
-  <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text">
-    <h2>Arteterapia</h2><h6>12 min</h6>
-        <h4>Expresa tus emociones con arte.</h4></div></div></a>
+    <a href="/ejercicios/5sentidos">
+      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/sentidos-card_fjbkx6.svg); width:373px;"><div class="card-ejercicio-text">
+        <h2>Técnica de los 5 sentidos</h2><h6>12 min</h6>
+        <h4>Técnica auto-calmante para aliviar la ansiedad.</h4></div></div>
+      </a>
+      <a href="/ejercicios/arteterapia">
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg);"><div class="card-ejercicio-text">
+          <h2>Arteterapia</h2><h6>12 min</h6>
+          <h4>Expresa tus emociones con arte.</h4></div></div>
+        </a>
         
-    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1661449020/Por%20Ti/jin_shin_cgpbgt.png); width: 30%;"><div class="card-ejercicio-text">
-      <h2>Jin Shin Jyutsu</h2><h6>12 min</h6>
-        <h4>Técnica auto-calmante para armonizar emociones.</h4></div>
-    </div>
-    
+   <a href="/ejercicios/arteterapia"><div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1661449020/Por%20Ti/jin_shin_cgpbgt.png); width:373px;"><div class="card-ejercicio-text">
+    <h2>Jin Shin Jyutsu</h2><h6>12 min</h6>
+  <h4>Técnica auto-calmante para armonizar emociones.</h4></div></div></a>
+
 </div>
               <% } %>
 
@@ -209,26 +263,35 @@
 </div>
 </div>
 <% } %>
-
-<div style="overflow-x: hidden;">
-<div class="chips">
-
-<div class="chip-hija" style="margin-right: 51px; ">
-  <a href="/ejerciciosfavoritos404"><button><span class="fa-solid fa-heart"></span>Favoritos</button></a>
-</div>
-<div class="chip-hija">
-  <a href="/ejerciciosrecientes404"><button><span class="fa-solid fa-calendar"></span>Recientes</button></a>
 </div>
 
+<div class="row justify-content-center">
+  <div class="col-4.5 col-margin" id="btn-extra">
+    <a href="/ejerciciosfavoritos404"><button class="ejercicios-btn"><span class="fa-solid fa-heart"></span>Favoritos</button></a>
+  </div>
+  <div class="col-4.5 col-margin2" id="btn-extra">
+    <a href="/ejerciciosrecientes404"><button class="ejercicios-btn"><span class="fa-solid fa-calendar"></span>Recientes</button></a>
+  </div>
 </div>
 
-  <h2 style="margin-top: 50px;  margin-bottom: 50px;">¿Necesitas ayuda?</h2>
-  <p>Si te encuentras en una situación de emergencia o necesitas ayuda profesional, te compartimos contactos a los que podrás acudir.</p>
+</div>
+
+<div class="texto-ayuda" style="padding: 0 15px; margin-top: 25px;">
+ <!--Código ejercicios-->
+ <h2 class="ejercicios-h2">¿Necesitas ayuda?</h2>
+ <h3 class="ejercicios-h3">Si te encuentras en una situación de emergencia o necesitas ayuda profesional, te compartimos contactos a los que podrás acudir.</h2>
+ </div>
 
   <div class="contenedor-especialista">
-    <a href="/listado"><button style="margin-top: 50px; margin-bottom: 50px;">Ver listado</button></a>
-</div>
+    <a href="/listado"><button class="ejercicios-btn" style="margin-top: 25px; margin-bottom: 100px;">Ver listado</button></a>
 </div>
     </main>
-    <%- include('./partials/footer') %>
+  </div>
+  <%- include('./partials/footer2') %>
+  <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
