--- a/src/views/imaginacion.ejs
+++ b/src/views/imaginacion.ejs
@@ -10,24 +10,79 @@
   <script src="js/script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style>
+
   <!--CSS-->
+  <link rel="stylesheet" href="/css/estilosindex.css">
+  <link rel="stylesheet" href="/css/ejerciciostext.css">
   <link rel="stylesheet" href="/css/imaginacion.css">
-  <link rel="stylesheet" href="/css/navbar.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
   <!--Kit FontAwesome--> 
   <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
- 
-  <%- include('./partials/nav') %>  
+
+  <header>
+    <div class="bg-dark">
+     <div class="container navcont w-100" id="nav-gradient">
+         <nav class="navbar navbar-expand-lg navbar-dark">
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+             </button>
+
+             
+             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                 <div class="navbar-nav w-100">
+                     <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
+                 </div>
+               </div>
+
+             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+               <div class="navg navbar-nav w-100">
+                  <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
+                  <% if(locals.isLogged) { %>
+                  <a class="nav-item nav-link" href="/listado">Contactos</a>
+                 <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
+                 <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
+                 <% } else { %>
+                   <a class="nav-item nav-link" href="/listado">Contactos</a>
+                   <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
+                   <a class="nav-item nav-link" href="/users/registro">Registrate</a>
+                   <% } %>
+               </div>
+             </div>
+           </nav>
+     </div>
+    </div>
+ </header>
 <main>
-   <!-- Tittle -->
-  <div class="titles">
-    <h2 style="margin-top: 100px;">Imaginación guiada</h2>
-    <p>La visualización o imaginación guiada es una técnica que se emplea para reducir el estrés y la ansiedad mediante la creación imaginaria de imágenes y emociones positivas.</p>
-    <p>Observa la ilustración que se muestra a continuación, y por varios segundos trata de imaginar tantas cosas como puedas, por ejemplo los árboles, hojas cayendo, el viento soplando, el ruido del agua... usa tu mente para tratar de estar en la ilustración de la forma más realista posible, empleando tu imaginación. </p>
-  </div>
-  
   <body>
+    <div class="divider"></div>
+   <!-- Tittle -->
+    <div class="container ejercicios-text">
+      <div class="row align-items-center justify-content-center">
+        <div class="col">
+        </div>
+        <div class="col-8 col-xs-12 col-sm-11 col-md-10">
+          <h2 class="h2-ansiedad">Imaginación guiada</h2>
+          <br>
+          <p>La visualización o imaginación guiada es una técnica que se emplea para reducir el estrés y la ansiedad mediante la creación imaginaria de imágenes y emociones positivas.</p>
+          <p>Observa la ilustración que se muestra a continuación, y por varios segundos trata de imaginar tantas cosas como puedas, por ejemplo los árboles, hojas cayendo, el viento soplando, el ruido del agua... usa tu mente para tratar de estar en la ilustración de la forma más realista posible, empleando tu imaginación. </p>
+           <br>
+        </div>
+        <div class="col">
+        </div>
+      </div>
+      <br>
+  </div>
+</div>
+  
     <img src="/img/imaginacion.svg" class="img-guiada">
     </body>
     <div class="back">
@@ -35,4 +90,10 @@
     </div>
     </main>
     <%- include('./partials/footer') %>
+      <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ 
     </html>
