--- a/src/views/perfilcopy.ejs
+++ b/src/views/perfilcopy.ejs
@@ -73,7 +73,6 @@
         <% if(user.objetivo !== 'saludsocial' && user.objetivo !== 'saludfisica') { %>
             <div class="gradient-profile">
 <div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658509260/Por%20Ti/salud_banner_lbbqj9.png);">
-</div>
     <% } %>
 
    <% if(user.objetivo !== 'saludsocial' && user.objetivo !== 'saludmental') { %>
@@ -83,15 +82,18 @@
     <% if(user.objetivo !== 'saludmental' && user.objetivo !== 'saludfisica') { %>
         <div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658341642/Por%20Ti/banner_social_yssu00.png);
         ">
-        <% } %></div>
+        <% } %>
 
  <!--Datos del perfil-->
         
 <h3 class="profile-h3">¡Hola!</h3>
-<h1 class="profile-h1"> <%= user.first_name %> <%= user.last_name %></h1>
+<h1 class="profile-h1" style="text-align: center!important"> <%= user.first_name %> <%= user.last_name %></h1>
 </div>
 </div>
 </div>
+            </div>
+
+
 
 <main style="padding-top: 25px;">
 <div class="espacio" style="padding: 25px"></div>
@@ -116,27 +118,63 @@
             </div>
         <% } %>
 
-        <div class="espacio" style="padding: 25px"></div>
 
-        <div class="ejercicios-box-cont" style="margin-top: 50px; padding-left: 75px; overflow: auto; text-align: center;">
+ <!--Ejercicios favoritos-->
+
+ <h2 class="ejercicios-h2" style="margin-top: 100px;" >Ejercicios favoritos</h2>   
+          <div class="ejercicios-box-cont" style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
+
+<!--EJERCICIOS-->
+
+    <% if(userLogged.objetivo !== 'saludsocial' && userLogged.objetivo != 'saludfisica') { %>
+   <!-- SALUD MENTAL -->
+
+<a href="/ejercicios/5sentidos"><div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/sentidos-card_fjbkx6.svg); width:373px;"><div class="card-ejercicio-text">
+  <h2>Técnica de los 5 sentidos</h2><h6>12 min</h6>
+<h4>Técnica auto-calmante para aliviar la ansiedad.</h4></div></div></a>
+
+<a href="/ejercicios/arteterapia">
+<div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text">
+<h2>Arteterapia</h2><h6>12 min</h6>
+    <h4>Expresa tus emociones con arte.</h4></div></div></a>
     
-          <a href="/ejercicios/5sentidos">
-            <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/sentidos-card_fjbkx6.svg); width:373px;"><div class="card-ejercicio-text">
-              <h2>Técnica de los 5 sentidos</h2><h6>12 min</h6>
-              <h4>Técnica auto-calmante para aliviar la ansiedad.</h4></div></div>
-            </a>
-            <a href="/ejercicios/arteterapia">
-              <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg);"><div class="card-ejercicio-text">
-                <h2>Arteterapia</h2><h6>12 min</h6>
-                <h4>Expresa tus emociones con arte.</h4></div></div>
-              </a>
-              
-         <a href="/ejercicios/arteterapia"><div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1661449020/Por%20Ti/jin_shin_cgpbgt.png); width:373px;"><div class="card-ejercicio-text">
-          <h2>Jin Shin Jyutsu</h2><h6>12 min</h6>
-        <h4>Técnica auto-calmante para armonizar emociones.</h4></div></div></a>
-      
-      </div>
+    <a href="/ejercicios/imaginacion-guiada">
+      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019618/Por%20Ti/Imaginacio%CC%81n_guiadaejercicios_oe6tbo.png); width:373px;"><div class="card-ejercicio-text">
+        <h2>Imaginación guiada</h2><h6>12 min</h6>
+        <h4>Visualiza para redirigir tus pensamientos.</h4></div></div>
+      </a>
 
+          <% } %>
+
+      <!-- SALUD FÍSICA -->
+
+      <% if(userLogged.objetivo !== 'saludmental' && userLogged.objetivo != 'saludsocial') { %>
+    <a href="/ejercicios/plato-del-buen-comer">
+      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019619/Por%20Ti/Plato_del_buen_comerejercicios_bkege6.png);"><div class="card-ejercicio-text">
+        <h2>Plato del buen comer</h2><h6>12 min</h6>
+        <h4>Guía tu alimentación para obtener salud.</h4></div></div>
+      </a>
+  <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189738/Por%20Ti/sueno-card_hpgpud.svg);"><div class="card-ejercicio-text">
+    <h2>Registro de sueño</h2><h6>12 min</h6>
+    <h4>Monitorea tus horas de sueño.</h4></div></div>
+    
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866646/Por%20Ti/card-actividad-fi%CC%81sica-ejercicio_tzsxxx.png);"><div class="card-ejercicio-text">
+          <h2>Registro de actividad física</h2><h6>12 min</h6>
+          <h4>Dale un seguimiento a tu entrenamiento.</h4></div></div>
+          <% } %>
+
+      <!-- SALUD SOCIAL -->
+
+      <% if(userLogged.objetivo !== 'saludfisica' && userLogged.objetivo != 'saludmental') { %>
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866646/Por%20Ti/card-company-ejercicio_qipewp.png);"><div class="card-ejercicio-text">
+          <h2>Actividades en compañia</h2><h6>12 min</h6>
+          <div class="h4-ben-text"><h4>Mantén buenos hábitos sociales.</h4>
+          <h4>Conecta con los demás.</h4></div></div></div>
+       
+</div>
+</div>
+<% } %>
+</div>
 
 <div class="buttonBanner"><a href="/users/logout"><button class="ejercicios-btn">Cerrar sesión</button></a></div>
 <div class="espacio" style="padding: 50px"></div>
