--- a/src/views/respiracion.ejs
+++ b/src/views/respiracion.ejs
@@ -7,17 +7,65 @@
 
     <!--CSS--> 
     <link rel="stylesheet" href="/css/respiracion.css">
+    <link rel="stylesheet" href="/css/ejerciciostext.css">
+    <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="/css/navbar.css" type="text/css">
+
     <link rel="stylesheet" href="/css/fondo.css" type="text/css">
 <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap" rel="stylesheet">
+
+
+ <!-- Bootstrap CSS -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+ <style>
+     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+     @import url('https://fonts.googleapis.com/css2?family=Fredoka:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+ </style>
+
 </head>
 
-<%- include('./partials/nav') %>
+<header>
+    <div class="bg-dark">
+     <div class="container navcont w-100">
+         <nav class="navbar navbar-expand-lg navbar-dark">
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+             </button>
 
-  <!--Estrellas--> 
+             
+             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                 <div class="navbar-nav w-100">
+                     <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
+                 </div>
+               </div>
+
+             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+               <div class="navg navbar-nav w-100">
+                  <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
+                  <% if(locals.isLogged) { %>
+                  <a class="nav-item nav-link" href="/listado">Contactos</a>
+                 <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
+                 <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
+                 <% } else { %>
+                   <a class="nav-item nav-link" href="/listado">Contactos</a>
+                   <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
+                   <a class="nav-item nav-link" href="/users/registro">Registrate</a>
+                   <% } %>
+               </div>
+             </div>
+           </nav>
+     </div>
+    </div>
+ </header>
+<!--Perfil-->
+
+
 <body>
-    <h1 style="color:white">Respira</h1>
+    <div class="ejercicios-text">
+    <h2 class="h2-ansiedad">Respira</h2>
+</div>
     <br>
     <br>
     <main>
@@ -38,6 +86,12 @@
 <br>
 <br>
 <br>
+  <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ 
 </body>
 
 <script>
@@ -51,5 +105,4 @@ document.querySelector("input[type='number']").addEventListener('change', (event
 </script>
 
 <div style="position: absolute; bottom: -260px;">
-    <%- include('./partials/footer') %>
     </div>
