--- a/src/views/tapping.ejs
+++ b/src/views/tapping.ejs
@@ -1,87 +1,168 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<head>
-    <title>Tapping</title>
-     
-    <!--FAVICON--> 
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arteterapia</title>
+
+ <!-- Bootstrap CSS -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
+ <style>
+     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+     @import url('https://fonts.googleapis.com/css2?family=Fredoka:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+ </style>
+
+      <!--FAVICON--> 
       <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
+      
+      <!--CSS--> 
+      <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
+      <link rel="stylesheet" href="/css/estilostext.css" type="text/css">
+      <link rel="stylesheet" href="/css/ejercicios.css" type="text/css">
+      <link rel="stylesheet" href="/css/footer.css" type="text/css">     
+      <link rel="stylesheet" href="/css/arteterapia.css" type="text/css">
+      <link rel="stylesheet" href="/css/tapping.css" type="text/css">
+      <!--Tipografías--> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <!--Poppins--> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+     <!--Nunito--> 
+     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+      <!--Kit FontAwesome--> 
+     <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
 
- <!--Nunito--> 
- <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    </head>
 
-    <!--CSS--> 
-    <link rel="stylesheet" href="/css/respiracion.css">
-    <link rel="stylesheet" href="/css/tapping.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="/css/navbar.css" type="text/css">
-<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap" rel="stylesheet">
-</head>
+    <header>
+      <div class="bg-dark">
+       <div class="container navcont w-100" >
+           <nav class="navbar navbar-expand-lg navbar-dark">
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+               </button>
+  
+               
+               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                   <div class="navbar-nav w-100">
+                       <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
+                   </div>
+                 </div>
+  
+               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                 <div class="navg navbar-nav w-100">
+                    <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
+                    <% if(locals.isLogged) { %>
+                    <a class="nav-item nav-link" href="/listado">Contactos</a>
+                   <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
+                   <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
+                   <% } else { %>
+                     <a class="nav-item nav-link" href="/listado">Contactos</a>
+                     <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
+                     <a class="nav-item nav-link" href="/users/registro">Registrate</a>
+                     <% } %>
+                 </div>
+               </div>
+             </nav>
+       </div>
+      </div>
+   </header>
 
-<%- include('./partials/nav') %>
-
-  <!--Estrellas--> 
-<body>
+   <body>
     <main>
-        <div class="titles" style="margin-left: -150px; margin-bottom: 50px;">
-    <h1 style="color:white; margin-bottom: 25px">Tapping</h1>
-        <p style="text-align: center">Es una técnica que permite liberar emociones, aliviar el estrés y la ansiedad.<br>Se basa en la acupuntura milenaria, enfocandose en determinados <br>puntos del cuerpo donde se acumula tensión emocional.<br><br></p> 
+<div class="container ejercicios-text" style="margin-top: 120px;">
+  <div class="row align-items-center justify-content-center">
+    <div class="col">
     </div>
-
-    <div class="cont">
-        <div class="cont-1" style="margin-left:80px;">
-            <p>Instrucciones:</p>
-            <br>
-
-            <div class="instruccion">
-                <h2>1. Piensa en algún pensamiento o emoción que te preocupe.</h2>
-            </div>
-
-            <div class="instruccion">
-                <h2>2. Califica del 1 al 10 la intensidad del malestar.</h2>
-                    <p>Siendo 0 impercibible y 10 no tolerable.</p>
-            </div>
-
-            <div class="instruccion">
-                <h2>3. Define una frase postiva.</h2>
-                <p>Ej. "Yo me acepto completa y profundamente."</p>
-                <p>"Aquí y ahora estoy a salvo."</p>
-                <p>"Estoy abiert@ a aceptarme completa y profundamente."</p>
-            </div>
-
-            <div class="instruccion">
-                <h2>4. Agrega a la frase "Aunque" + "Emoción negativa" + "Frase positiva". Ej. "Aunque siento ansiedad, aquí y ahora estoy a salvo." <br> Repite la
-                    frase mientras haces pequeños golpecitos suaves en los siguientes puntos:</h2>
-                <ul>
-                    <li>1. Golpetea arriba de las cejas.</li>
-                    <li>2. Golpetea por debajo de los ojos.</li>
-                    <li>3. Golpetea a un costado de los ojos.</li>
-                    <li>4. Golpetea por debajo de la nariz.</li>
-                    <li>5. Golpetea en la barbilla.</li>
-                    <li>6. Golpetea por debajo de la clavícula.</li>
-                </ul>
-            </div>
-        </aside>
+    <div class="col-8 col-xs-12 col-sm-11 col-md-10">
+      <h2 class="h2-ansiedad" style="font-family: 'Poppins'!important; font-size: 32px!important; font-weight: 700!important;">Tapping</h2>
+      <br>
+      <p class="title-p" style="text-align: center">Es una técnica que permite liberar emociones, aliviar el estrés y la ansiedad. Se basa en la acupuntura milenaria, enfocandose en determinados puntos del cuerpo donde se acumula tensión emocional.<br><br></p> 
+      <br>
     </div>
+    <div class="col">
+    </div>
+  </div>
+  <br>
+</div>
 
-    <div class="cont-2">
+<!--CONTENIDO-->
+
+<div class="container" style="margin-bottom: 25px;">
+    <div class="row justify-content-center text-align-center">
+      <div class="col-lg-5">
+        <div class="cont">
+            <div class="cont-1">
+                <p>Instrucciones:</p>
+                <br>
+    
+                <div class="instruccion">
+                    <h2>1. Piensa en algún pensamiento o emoción que te preocupe.</h2>
+                </div>
+    
+                <div class="instruccion">
+                    <h2>2. Califica del 1 al 10 la intensidad del malestar.</h2>
+                        <p>Siendo 0 impercibible y 10 no tolerable.</p>
+                </div>
+    
+                <div class="instruccion">
+                    <h2>3. Define una frase postiva.</h2>
+                    <p>Ej. "Yo me acepto completa y profundamente."</p>
+                    <p>"Aquí y ahora estoy a salvo."</p>
+                    <p>"Estoy abiert@ a aceptarme completa y profundamente."</p>
+                </div>
+    
+                <div class="instruccion">
+                    <h2>4. Agrega a la frase "Aunque" + "Emoción negativa" + "Frase positiva". Ej. "Aunque siento ansiedad, aquí y ahora estoy a salvo." <br> Repite la
+                        frase mientras haces pequeños golpecitos suaves en los siguientes puntos:</h2>
+                    <ul>
+                        <li>1. Golpetea arriba de las cejas.</li>
+                        <li>2. Golpetea por debajo de los ojos.</li>
+                        <li>3. Golpetea a un costado de los ojos.</li>
+                        <li>4. Golpetea por debajo de la nariz.</li>
+                        <li>5. Golpetea en la barbilla.</li>
+                        <li>6. Golpetea por debajo de la clavícula.</li>
+                    </ul>
+                </div>
+            </aside>
+        </div>
+      </div>
+      </div>
+      <div class="col-1">
+    </div>
+      <div class="col-lg-5 align-self-center">
+        <div class="cont-2">
             <div class="short">
             <iframe width="480" height="750" padding="-5px" src="https://www.youtube.com/embed/y-jMyBuU48w" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div class="col">
+            </div>
     </div>
+    </div>
+      </div>
     </div>
 
-    <div class="back">
-        <a href="/misejercicios"><button style="margin-bottom: 50px; margin-right: 100px;">Volver</button></a>
-    </div>
-</main>
-<br>
-<br>
-<br>
-<br>
-</body>
-</html>
-<div style="position: absolute; bottom: -700px;">
-<%- include('./partials/footer') %>
+<div class="back">
+    <a href="/misejercicios"><button>Volver</button></a>
 </div>
+<br>
+</main>
+</body>
+  <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
+
+</html>
