Se cambiaron nombres en title

--- a/src/views/ansiedad.ejs
+++ b/src/views/ansiedad.ejs
@@ -28,7 +28,7 @@
       <!--Kit FontAwesome--> 
       <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
  
-    <title>Inicio</title>
+    <title>Registro de ansiedad</title>
   </head>
 
     <header>
