--- a/src/views/perfilcopy.ejs
+++ b/src/views/perfilcopy.ejs
@@ -29,7 +29,7 @@
       <!--Kit FontAwesome--> 
       <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
  
-    <title>Inicio</title>
+    <title>Mi perfil</title>
   </head>
   <body>
 
